# openmosqueproject-presentation

./: CONTRIBUTORS.txt  README.md  db.sqlite3  index.html  manage.py  pyproject.toml  setup.cfg
config/: urls.py
config/settings/: base.py  local.py  production.py
css/: style.css
docs/: Makefile  make.bat  users.rst
masjid/: admin.py  apps.py  models.py  urls.py  views.py
masjid/migrations/: 0001_initial.py
masjid/templates/: delete.html  detail.html  home.html  list.html
openmosqueproject/: .gitignore  LICENSE  asgi.py  conftest.py  settings.py  urls.py  wsgi.py
openmosqueproject/config/: wsgi.py
openmosqueproject/config/settings/: test.py
openmosqueproject/docs/: conf.py  howto.rst  index.rst
openmosqueproject/openmosqueproject/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
openmosqueproject/openmosqueproject/templates/: base.html
openmosqueproject/openmosqueproject/users/: admin.py
openmosqueproject/openmosqueproject/users/tests/: test_admin.py  test_forms.py  test_urls.py  test_views.py
openmosqueproject/users/: apps.py  models.py  urls.py
openmosqueproject/users/tests/: test_models.py
