[tool.poetry]
name = "openmosqueproject"
version = "0.1.0"
description = ""
authors = ["bitfez, innicoder"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
django-extensions = "^3.1.5"
django-debug-toolbar = "^3.2.4"
fontawesomefree = "^6.1.1"
django-crispy-forms = "^1.14.0"

[tool.poetry.dev-dependencies]
python-decouple = "^3.6"
easy-thumbnails = "^2.8.1"
django-debug-toolbar = "^3.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
